<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/roadimage"
    android:orientation="vertical" >

 <Button
     android:id="@+id/vanButton"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="@string/van"
     />
 <Button 
     android:id="@+id/truckButton"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text = "@string/truck"
     />
 <Button 
     android:id="@+id/sedanButton"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text ="@string/sedan"
     />
 
 <TextView 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="@string/blank" 
     android:textColor="#000000"
     />
 <Button
     android:id="@+id/homeButton"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="@string/homeButton"
     />
</LinearLayout>