<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/roadimage"
    android:orientation="vertical" >

 <TextView 
     android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
 	    android:text="@string/yourReservations"
 	    android:textColor="#000000"
 	    />
    <TextView 
        android:id="@+id/viewres"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textColor="#000000"
        />
    <EditText 
        android:id="@+id/getreservationnum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterres"
        />
    <Button 
        android:id="@+id/cancelReservation"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/cancelReservation"
        />
    <Button 
       android:id="@+id/homeButton"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/homeButton" 
       />

</LinearLayout>