<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/roadimage"
    android:orientation="vertical" >
<TextView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/username"
    android:textColor="#000000"
    />
<EditText 
    android:id="@+id/getusername"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/username"
    />
<TextView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/username"
    android:textColor="#000000"
    />
<EditText 
    android:id="@+id/getpassword"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    />
<Button 
    android:id="@+id/okButton"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/okButton"
    />
<Button 
    android:id="@+id/homeButton"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/homeButton"
    />

<TextView
    android:id="@+id/confirmation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/blank"
    android:textColor="#000000"
    android:textAppearance="?android:attr/textAppearanceMedium" 
    />

</LinearLayout>