<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/roadimage" >

 <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" 
        android:textColor="#000000"
        />
    <Button 
        android:id="@+id/createAccount"
        android:layout_width="fill_parent"
        android:layout_height= "wrap_content"
        android:text = "@string/createAccount"
        />
    <Button 
        android:id="@+id/makeReservation"
        android:layout_width = "fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/makeReservation"
        />
    <Button 
        android:id="@+id/cancelReservation"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/cancelReservation"
        />

</LinearLayout>