<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/roadimage" >

 <TextView 
     android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
     android:text="@string/tranhistory"
     android:textColor="#000000"
 	    />
    <TextView 
        android:id="@+id/viewtrans"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textColor="#000000"/>
   <Button 
       android:id="@+id/homeButton"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/homeButton" />

</LinearLayout>